--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>cf.vbnm.chatgpt</groupId>
     <artifactId>ChatGPT4Java</artifactId>
-    <version>1.0.4-SNAPSHOT</version>
+    <version>1.0.4-jre17-SNAPSHOT</version>
     <name>ChatGPT4Java</name>
     <description>ChatGPT4.0、 ChatGPT Java SDK.</description>
     <url>https://vbnm.cf</url>
@@ -19,7 +19,7 @@
 
 
     <properties>
-        <java.version>8</java.version>
+        <java.version>17</java.version>
         <project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>utf-8</project.reporting.outputEncoding>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -28,13 +28,13 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 
-        <compile.version>8</compile.version>
+        <compile.version>17</compile.version>
 
         <retrofit2.version>2.9.0</retrofit2.version>
         <slf4j.version>2.0.7</slf4j.version>
         <logback.version>1.4.6</logback.version>
         <kotlin.version>1.8.20</kotlin.version>
-        <spring-framework.version>5.3.26</spring-framework.version>
+        <spring-framework.version>6.0.8</spring-framework.version>
         <jackson.version>2.14.2</jackson.version>
         <logback.version>1.3.6</logback.version>
     </properties>
@@ -168,8 +168,8 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <source>8</source>
-                    <target>8</target>
+                    <source>17</source>
+                    <target>17</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -195,6 +195,9 @@
                         <goals>
                             <goal>jar</goal>
                         </goals>
+                        <configuration>
+                            <javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
