--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>cf.vbnm.chatgpt</groupId>
     <artifactId>ChatGPT4Java</artifactId>
-    <version>1.1.6-jre${java.version}-SNAPSHOT</version>
+    <version>1.1.7-jre${java.version}-SNAPSHOT</version>
     <name>ChatGPT4Java</name>
     <description>ChatGPT4.0、 ChatGPT Java SDK.</description>
     <url>https://vbnm.cf</url>
@@ -57,7 +57,14 @@
 
         <dependency>
             <groupId>org.springframework</groupId>
-            <artifactId>spring-webmvc</artifactId>
+            <artifactId>spring-web</artifactId>
+            <version>${spring-framework.version}</version>
+            <optional>true</optional>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
             <version>${spring-framework.version}</version>
             <optional>true</optional>
             <scope>provided</scope>
