--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,8 @@
         <slf4j.version>2.0.7</slf4j.version>
         <logback.version>1.4.6</logback.version>
         <kotlin.version>1.8.20</kotlin.version>
-        <spring-framework.version>6.0.8</spring-framework.version>
+<!--        <spring-framework.version>5.3.28</spring-framework.version>-->
+        <spring-framework.version>6.0.10</spring-framework.version>
         <jackson.version>2.14.2</jackson.version>
         <logback.version>1.3.6</logback.version>
     </properties>
